Update index.html (img path)

--- a/index.html
+++ b/index.html
@@ -18,87 +18,12 @@
               <div class="searchBar">
                 <input type="text" placeholder="Search for Course code, Name, Instructor, Pillar and/or Term">
                 <button type="submit">
-                    <img src="/images/searchHeader/searchIcon.svg">
+                    <img src="./images/searchHeader/searchIcon.svg">
                 </button>
               </div>
 
             </div>
 
-            <!-- <div class="filter">
-            <div class="filter-term">
-                <div class="div">
-                <div class="rectangle"></div>
-                <div class="text-wrapper-2">Term</div>
-                <div class="frame">
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">1</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">2</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">3</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">4</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">5</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="overlap-group-2"><div class="text-wrapper-3">6</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">7</div></div>
-                    </div>
-                    </div>
-                    <div class="group">
-                    <div class="term-icon">
-                        <div class="div-wrapper"><div class="text-wrapper-3">8</div></div>
-                    </div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="filter-pillar">
-                <div class="overlap-2">
-                <div class="rectangle-2"></div>
-                <div class="EPD">
-                    <div class="overlap-group-3"><div class="text-wrapper-4">EPD</div></div>
-                </div>
-                <div class="ESD">
-                    <div class="overlap-group-3"><div class="text-wrapper-4">ESD</div></div>
-                </div>
-                <div class="ISTD">
-                    <div class="overlap-3"><div class="text-wrapper-4">ISTD</div></div>
-                </div>
-                <div class="ASD">
-                    <div class="overlap-group-3"><div class="text-wrapper-4">ASD</div></div>
-                </div>
-                <div class="DAI">
-                    <div class="overlap-group-3"><div class="text-wrapper-4">DAI</div></div>
-                </div>
-                <div class="freshmore">
-                    <div class="overlap-4"><div class="text-wrapper-5">Freshmore</div></div>
-                </div>
-                <div class="text-wrapper-6">Pillar</div>
-                </div>
-            </div>
-            </div> -->
-        
             <div class="filter">
                 <div class="pillarFilter">
                     <p>Pillar</p>
